# ConnectFour

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: implementation_document.md  software_requirements_specification.md  testing_document.md  user_manual.md
documentation/weeklyreports/: software_requirements_specification.md  testing_document.md  week1  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: Main.py  board.py  game_loop.py  minimax.py  screen.py
src/tests/: AI_test.py  board_test.py  gameloop_test.py  screen_test.py
