[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["emma <emmasofia@live.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
invoke = "^2.0.0"
coverage = "^7.1.0"
numpy = "^1.24.1"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
